--- a/src/assets/sass/header/style.css
+++ b/src/assets/sass/header/style.css
@@ -7,7 +7,11 @@ header {
 header h1 {
   margin: 0;
   padding: 20px 0;
-  background-color: rgba(0, 0, 0, 0.4);
+  font-family: "Exo 2", sans-serif;
+  color: #211c7c;
+  background-color: rgba(236, 236, 236, 0.4);
+  -webkit-box-shadow: 0px 3px rgba(0, 0, 0, 0.103);
+          box-shadow: 0px 3px rgba(0, 0, 0, 0.103);
   text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
