--- a/src/assets/sass/header/style.scss
+++ b/src/assets/sass/header/style.scss
@@ -1,3 +1,6 @@
+$exo2: 'Exo 2', sans-serif;
+$titi: 'Titillium Web', sans-serif;
+
 header {
     margin: 0;
     padding: 0;
@@ -5,7 +8,10 @@ header {
     h1 {
         margin: 0;
         padding: 20px 0;
-        background-color: rgba(0, 0, 0, 0.4);
+        font-family: $exo2;
+        color: rgb(33, 28, 124);
+        background-color: rgba(236, 236, 236, 0.4);
+        box-shadow: 0px 3px rgba(0, 0, 0, 0.103);
         text-align: center;
     }
 }
