--- a/src/assets/sass/cardList/style.scss
+++ b/src/assets/sass/cardList/style.scss
@@ -1,3 +1,11 @@
+div.sort {
+    display: flex;
+    justify-content: center;
+    select {
+        margin-top: 20px;
+    }
+}
+
 section {
     display: flex;
     flex-wrap: wrap;
