--- a/src/assets/sass/cardOne/style.css
+++ b/src/assets/sass/cardOne/style.css
@@ -1,5 +1,5 @@
 article {
-  background-color: rgba(192, 184, 184, 0.986);
+  background-color: rgba(0, 0, 0, 0.199);
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 5px;
@@ -7,6 +7,7 @@ article {
   transition: 0.3s;
   width: 20%;
   margin: 5px;
+  margin-top: 100px;
 }
 
 article div {
