--- a/src/assets/sass/cardOne/style.scss
+++ b/src/assets/sass/cardOne/style.scss
@@ -1,10 +1,11 @@
 article {
-    background-color: rgba(0, 0, 0, 0.199)
+    background-color: rgba(0, 0, 0, 0.199);
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     border-radius: 5px;
     transition: 0.3s;
     width: 20%;
     margin: 5px;
+    margin-top: 100px;
     div {
         display: flex;
         justify-content: space-between;
